--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off",
     "react/jsx-filename-extension": [
       1,
       {
