--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.396.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
