--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.3.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.396.0",
