--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -31,8 +32,11 @@
     "lucide-react": "^0.396.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "npx": "^10.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-youtube": "^10.1.0",
+    "shadcn-ui": "^0.8.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
