--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "npx": "^10.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "react-youtube": "^10.1.0",
     "shadcn-ui": "^0.8.0",
     "sonner": "^1.5.0",
@@ -46,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "eslint": "^8.57.0",
